--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+    <head>
+        <meta charset="utf-8">
+        <title>Testing</title>
+    </head>
+    <body>
+        
+    </body>
+</html>
