--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
          crossorigin=""></script>
     </head>
     <body>
-        
+        <div id="mapid" style="width: 600px; height: 400px;"></div>
+        <script scr = "map.js"></script>
     </body>
 </html>
