--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,6 @@
     </head>
     <body>
         <div id="mapid" style="width: 600px; height: 400px;"></div>
-        <script scr = "map.js"></script>
+        <script src = "map.js"></script>
     </body>
 </html>
