moved height width

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
         <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
          integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
          crossorigin=""></script>
+         <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.7.0/d3.min.js"></script>
+         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="mapid" style="width: 600px; height: 400px;"></div>
+        <div id="mapid"></div>
         <script src = "map.js"></script>
     </body>
 </html>
