--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
          integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
          crossorigin=""></script>
          <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.7.0/d3.min.js"></script>
-         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="mapid"></div>
+        <div id="mapid" style="width: $(window).width(); height=$(window).height(); "></div>
         <script src = "map.js"></script>
     </body>
 </html>
