--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.7.0/d3.min.js"></script>
     </head>
     <body>
-        <div id="mapid" style="width: $(window).width(); height=$(window).height(); "></div>
+        <div id="mapid" style="width: $(window).width(); height: $(window).height(); "></div>
         <script src = "map.js"></script>
     </body>
 </html>
