--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
          integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
          crossorigin=""></script>
          <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.7.0/d3.min.js"></script>
+         <link rel="icon" type="image/png" href="Map.png">
 
     </head>
     <body>
