--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
          integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
          crossorigin=""></script>
          <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.7.0/d3.min.js"></script>
+         <link rel="manifest" href="/manifest.json">
+         <meta name="apple-mobile-web-app-capable" content="yes">
+         <meta name="apple-mobile-web-app-status-bar-style" content="black">
+         <meta name="apple-mobile-web-app-title" content="Weather PWA">
+         <link rel="apple-touch-icon" href="Map.png">
+         <meta name="msapplication-TileImage" content="Map.png">
+         <meta name="msapplication-TileColor" content="#2F3BA2">
          <link rel="icon" type="image/png" href="Map.png">
 
     </head>
