--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     </head>
     <body>
-        <div id="mapid" style="width : 600px; height: 400px;"></div>
+        <div id="mapid" style="width : 600px; height: 400px;  display: block; margin-left: auto; margin-right: auto;"></div>
         <script src = "map.js"></script>
     </body>
 </html>
