--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     </head>
     <body>
-        <div id="mapid" style="width : window.innerWidth; height: 100%; "></div>
+        <div id="mapid" style="width : window.innerWidth; height: 800px; "></div>
         <script src = "map.js"></script>
     </body>
 </html>
