--- a/index.html
+++ b/index.html
@@ -30,10 +30,15 @@
          <meta name="msapplication-TileImage" content="Map.png">
          <meta name="msapplication-TileColor" content="#2F3BA2">
          <link rel="icon" type="image/png" href="Map.png">
-
+         <style>
+          html, body, #mapid {
+            height: window.innerHeight;
+            width: window.innerWidth;
+          }
+  </style>
     </head>
     <body>
-        <div id="mapid" style="width : window.innerWidth; height: 800px; "></div>
+        <div id="mapid"></div>
         <script src = "map.js"></script>
     </body>
 </html>
