--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
          <meta name="msapplication-TileColor" content="#2F3BA2">
          <link rel="icon" type="image/png" href="Map.png">
          <style>
-          html, body, #mapid {
+          html, body {
             height: window.innerHeight;
             width: window.innerWidth;
           }
-  </style>
+          #mapid {
+            height: 100%;
+          }
+          </style>
     </head>
     <body>
         <div id="mapid"></div>
