--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          <link rel="icon" type="image/png" href="Map.png">
          <style>
           html, body {
-            height: window.innerHeight;
+            height: 100%;
             width: window.innerWidth;
           }
           #mapid {
