--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           html, body {
             height: 100%;
             width: window.innerWidth;
+            margin: 0px;
           }
           #mapid {
             height: 100%;
