--- a/index.html
+++ b/index.html
@@ -2,19 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>Testing</title>
-        <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
-        <script>
-          // Initialize Firebase
-          var config = {
-            apiKey: "AIzaSyBqYacwh33F0kinyHr8arQGCoX_arObBn4",
-            authDomain: "test-ba02e.firebaseapp.com",
-            databaseURL: "https://test-ba02e.firebaseio.com",
-            projectId: "test-ba02e",
-            storageBucket: "test-ba02e.appspot.com",
-            messagingSenderId: "317256087743"
-          };
-          firebase.initializeApp(config);
-        </script>
+
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
         integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
         crossorigin=""/>
@@ -44,5 +32,25 @@
     <body>
         <div id="mapid"></div>
         <script src = "map.js"></script>
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+            https://firebase.google.com/docs/web/setup#config-web-app -->
+
+        <script>
+          // Your web app's Firebase configuration
+          var firebaseConfig = {
+            apiKey: "AIzaSyBqYacwh33F0kinyHr8arQGCoX_arObBn4",
+            authDomain: "test-ba02e.firebaseapp.com",
+            databaseURL: "https://test-ba02e.firebaseio.com",
+            projectId: "test-ba02e",
+            storageBucket: "test-ba02e.appspot.com",
+            messagingSenderId: "317256087743",
+            appId: "1:317256087743:web:92339c36314d55a1"
+          };
+          // Initialize Firebase
+          firebase.initializeApp(firebaseConfig);
+        </script>
     </body>
 </html>
