--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
          integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
          crossorigin=""></script>
          <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.7.0/d3.min.js"></script>
-         <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
+         <meta name="theme-color" content="#ffffff">
+         <meta name="viewport" content="width=device-width, initial-scale=1">
+         <meta name="Description" content="Distance Finder">
+        <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
         <link rel="apple-touch-icon" sizes="76x76" href="icons/apple-icon-76x76.png">
